target top_nav comment out top, display, right, width, z-index and justify content. change padding bottom to 90px and set position relative. in top_nav_links change position from fixed to absolute. target top_nav_title, add position top and left

--- a/src/Styles/top_nav.scss
+++ b/src/Styles/top_nav.scss
@@ -1,16 +1,26 @@
 .top_nav {
-  top: 3vh;
-  display: flex;
-  right: 3vw;
-  width: 100%;
-  // gap: 5vw;
-  z-index: 3;
-  justify-content: space-around;
-  padding-bottom: 30px;
+  // top: 3vh;
+  // display: flex;
+  // right: 3vw;
+  // width: 100%;
+  // // gap: 5vw;
+  // z-index: 3;
+  // justify-content: space-around;
+  padding-bottom: 90px;
+  position: relative;
 
   .top_nav_links {
     display: flex;
     gap: 5vw;
+    position: absolute;
+    top: 2vh;
+    right: 6vw;
+  }
+
+  .top_nav_title {
+    position: absolute;
+    top: 1vh;
+    left: 6vw;
   }
 
   a {
